Fixed some layout issues

--- a/resources/assets/sass/_bootstrap.scss
+++ b/resources/assets/sass/_bootstrap.scss
@@ -51,20 +51,6 @@
 		}
 	}
 
-	.sketchpad-container {
-		max-width: 1570px;
-		padding-left: 15px;
-		padding-right: 15px;
-		margin-left: auto;
-		margin-right: auto;
-	}
-
-	@media (min-width: 1600px){
-		.container {
-			width: 1570px;
-		}
-	}
-
 	.alert{
 		padding: 6px 11px;
 
